# KerasToCPP

./: .gitignore  README.md
cpp/: CMakeLists.txt  Layer.cpp  Layer.h  Model.cpp  Model.h  MultiDimArray.cpp  MultiDimArray.h  main.cpp  utils.cpp  utils.h
cpp/arrays/: Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  Array4D.cpp  Array4D.h
cpp/layers/: Activation.cpp  Activation.h  Conv2D.cpp  Conv2D.h  Dense.cpp  Dense.h  Flatten.cpp  Flatten.h  MaxPooling2D.cpp  MaxPooling2D.h
py/: keras_to_cpp.py  mnist_example.py  save_mnist.py  validate_model.py  validate_saved_model.py
